--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -415,6 +415,9 @@ a:visited{
 	position: relative;
 }
 
+.align{
+	text-align: left;
+}
 body > section {
 	float: left;
 	width: 100%;
@@ -564,9 +567,7 @@ body > section > .holder > .title h2:after {
 }
 
 
-.align{
-	text-align: left;
-}
+
 
 /* /gifs */
 .rw-words-1 span{
@@ -1430,755 +1431,34 @@ padding: 200px 0;
 			}
 		}
 
-		@-webkit-keyframes flash {
-			0%, 50%, 100% {
-				opacity: 1;
-			}
-
-			25%, 75% {
-				opacity: 0;
-			}
-		}
-
-		@keyframes flash {
-			0%, 50%, 100% {
-				opacity: 1;
-			}
-
-			25%, 75% {
-				opacity: 0;
-			}
-		}
-
 
 /* **************gallery************** */
 
 /* **************GALLERY BUTTON CONTAINER ************** */
 
- .holder button {
-	font-family: "Abril Fatface", serif;
-	background-color: #fff;
-	color: #000;
-	border: 1px solid #f91791;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	text-decoration: none;
-	height: 45px;
-	line-height: 47px;
-	min-width: 130px;
-	display: inline-block;
-	text-transform: uppercase;
-	position: relative;
-	z-index: 0;
-	overflow: hidden;
-	font-size: 18px;
-	text-align: center;
-	cursor: pointer;
-}
 
 .holder button:before {
 	filter: progid:DXImageTransform .Microsoft .Alpha(Opacity=0);
-	opacity: 0;
-	background: #f91791;
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 150%;
-	height: 100%;
-	-moz-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
-	-ms-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
-	-webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
-	transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
-	-moz-transition: -moz-transform 0.4s, opacity 0.4s, background-color 0.4s;
-	-o-transition: -o-transform 0.4s, opacity 0.4s, background-color 0.4s;
-	-webkit-transition: -webkit-transform 0.4s, opacity 0.4s, background-color 0.4s;
-	transition: transform 0.4s, opacity 0.4s, background-color 0.4s;
-	-moz-transform-origin: 0% 100%;
-	-ms-transform-origin: 0% 100%;
-	-webkit-transform-origin: 0% 100%;
-	transform-origin: 0% 100%;
-	z-index: -1;
 }
 
  .holder button:hover {
-	color: #fff;
-	-moz-transition: all 0.5s;
-	-o-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
 	filter: progid:DXImageTransform .Microsoft .Alpha(enabled=false);
-	opacity: 1;
 }
 
-
-.grid {
-	/* margin: 25px 30px 25px 60px; */
-	margin-top: 50px;
-}
-
-.grid:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-.grid-sizer,
-.grid-item {
-  width: 30%;
-
-}
-
-.grid-item,
-.figure {
-  /* float: left; */
-  overflow: hidden;
-}
-
-.grid-item img {
-  display: block;
-  max-width: 100%;
-}
-
-.grid-item:hover {
-
-
-}
-
-.grid-item img:hover {
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-  /* For IE8 and earlier */
-}
-
-.gallery_containers {
-	/* margin-top: 30px;
-	margin: 20px 0 0 0;
-	padding: 0;
-	display: block;
-	text-align: center;
-	width: 100%; */
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-direction: column;
-	flex-direction: column;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	height: 100vw;
-}
-/* .project {
-		position: relative;
-    background-color: #fff;
-		min-width: 230px;
-		max-width: 315px;
-} */
-
-.gallery_container {
-	display: inline-flex;
-	width: 400px;
-	height: 300px;
-	margin: 10px;
-	/* margin: 10px;
-	border: 1px solid #000; */
-	position: relative;
-		border:1px solid #000;
-}
-.gallery_container img {
-	width: 100%;
-	height: 100%;
-	outline:1px solid #000;
-	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
-}
-
-.project_info {
-	width: 100%;
-	height: 100%;
-	font-family: "Abril Fatface", serif;
-	font-size: 50px;
-	color: #000;
-	padding-top: 80px;
-	background: #f91791;
-	position: absolute;
-	opacity: 0;
-	-moz-transition: all 0.25s ease-in-out;
-	-o-transition: all 0.25s ease-in-out;
-	-webkit-transition: all 0.25s ease-in-out;
-	transition: all 0.25s ease-in-out;
-	overflow: hidden;
-}
-
-.project_info:hover {
-	opacity: 0.9;
-}
-
-.project_info span {
-	display: block;
-	font-size: 16px;
-}
-
-/*.toggles:active{
-color: #fff;
-background-color: #f91791;
-border: 1px solid #000;
-
-}*/
-.grid-item button{
-	font-family: 'Abril Fatface', serif;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	text-decoration: none;
-	height: 45px;
-	line-height: 47px;
-	padding: 0 25px;
-	/* min-width: 130px; */
-	display: inline-block;
-	text-transform: uppercase;
-	position: relative;
-	overflow: hidden;
-	font-size: 18px;
-	text-align: center;
-	cursor: pointer;
-}
 
 .grid-item button:hover {
-	/* color: #fff;
-	background-color: #f91791; */
-	border: 1px solid #000;
-	-moz-transition: all 0.5s ease-in-out;
-	-o-transition: all 0.5s ease-in-out;
-	-webkit-transition: all 0.5s ease-in-out;
-	transition: all 0.5s ease-in-out;
-	filter: progid:DXImageTransform .Microsoft .Alpha(enabled=false);
-	opacity: 1;
-
-}
-
-#resume .links {
-	margin: 20px 0 0 0;
-}
-#resume .links a {
-	margin: 0 0 0 15px;
-	color: #f91791;
-}
-#resume .links a + a {
-	margin: 0 0 0 15px;
-	color: #f91791;
-}
-#resume .links a:hover {
-	color: #fff;
-	-moz-transition: all 0.5s;
-	-o-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
 	filter: progid:DXImageTransform .Microsoft .Alpha(enabled=false);
 	opacity: 1;
 }
 
-#resume .links a:hover i{
-	color: #fff;
-	-moz-transition: all 0.5s;
-	-o-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
-	filter: progid:DXImageTransform .Microsoft .Alpha(enabled=false);
-	opacity: 1;
-}
-
-#resume .links i {
-	-moz-transition: all 0.5s;
-	-o-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
-	filter: progid:DXImageTransform .Microsoft .Alpha(enabled=false);
-	opacity: 1;
-	font-size: 18px;
-	cursor: pointer;
-	margin: 0 8px 0 0;
-}
-
-#resume i:hover {
-	color: #fff;
-	-moz-transition: all 0.5s;
-	-o-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
-	filter: progid:DXImageTransform .Microsoft .Alpha(enabled=false);
-	opacity: 1;
-}
-#resume .links i:hover {
-	color: #fff;
-	-moz-transition: all 0.5s;
-	-o-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
-	filter: progid:DXImageTransform .Microsoft .Alpha(enabled=false);
-	opacity: 1;
-}
-
-.pop {
-	display:none;
-	position:fixed;
-	top:10%;
-	left:10%;
-	width:80%;
-	height:85%;
-	background: #fff;
-	outline:1px solid #000;
-	z-index: 999;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-
-
-}
-.pop:after {
-	position: fixed;
-	content: "";
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	z-index: -2;
-  height: 2000px;
-  width: 100%;
-  margin-top: -340px;
-  margin-bottom: -1000px;
-	background: #000;
-	opacity: 0.7;
-
-	/* transform: skew(0deg, -5deg);
-  -webkit-animation: zigzag 1s linear infinite;
-  animation: zigzag 1s linear infinite;
-  background: -webkit-linear-gradient(315deg, rgba(249, 23, 145, 1) 0.25em, transparent 0.25em) -0.5em 0, -webkit-linear-gradient(225deg, rgba(249, 23, 145, 1) 0.25em, transparent 0.25em) -0.5em 0, -webkit-linear-gradient(135deg, rgba(249, 23, 145, 1) 0.25em, transparent 0.25em) 0 0, -webkit-linear-gradient(45deg, rgba(249, 23, 145, 1) 0.25em, transparent 0.25em) 0 0;
-  background: linear-gradient(135deg, rgba(249, 23, 145, 1) 0.25em, transparent 0.25em) -0.5em 0, linear-gradient(225deg, rgba(249, 23, 145, 1) 0.25em, transparent 0.25em) -0.5em 0, linear-gradient(315deg, rgba(249, 23, 145, 1) 0.25em, transparent 0.25em) 0 0, linear-gradient(45deg, rgba(249, 23, 145, 1) 0.25em, transparent 0.25em) 0 0;
-  background-size: 0.75em 0.75em; */
-}
-
-/* @-webkit-keyframes zigzag {
-  100% {
-    background-position: 1em 0, 1em 0, -0.75em 0 , -0.75em 0;
-  }
-}
-@keyframes zigzag {
-  100% {
-    background-position: 1em 0, 1em 0, -0.75em 0 , -0.75em 0;
-  }
-} */
-
-.pop:before {
-	position: absolute;
-	content: "";
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background: #FFF;
-	z-index: -1;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-}
-.pop > h6 {
-	padding:50px 30px 20px 30px;
-	color: #f91791;
-	font-size:50px;
-}
-
-.pop > p {
-	margin: 20px;
-	color: #000;
-	font-family: 'Raleway', sans-serif;
-	font-weight: 100;
-	font-size: 20px;
-	line-height: 28px;
-}
-/* .pop > span {
-		position:absolute;
-		top:4%;
-		right:4%;
-		cursor:pointer;
-		font-size: 24px;
-		-moz-border-radius: 100px;
-		-webkit-border-radius: 100px;
-		border-radius: 100px;
-		border: 2px solid #f91791;
-		display: inline-block;
-		width: 55px;
-		height: 55px;
-		line-height: 55px;
-		margin: 0 5px;
-		-moz-transition: all 0.25s ease-in-out;
-		-o-transition: all 0.25s ease-in-out;
-		-webkit-transition: all 0.25s ease-in-out;
-		transition: all 0.25s ease-in-out;
-		color: #f91791;
-} */
-
-#resume .pop button.gal_btn {
-		position:absolute;
-		top:4%;
-		right:4%;
-		cursor:pointer;
-		font-size: 24px;
-		-moz-border-radius: 50%;
-		-webkit-border-radius: 50%;
-		border-radius: 50%;
-		border: 2px solid transparent;
-		color: #f91791;
-		background-color: transparent;
-		display: inline-block;
-		width: 50px;
-		height: 50px;
-		line-height: 50px;
-		padding: 0 5px;
-		-moz-transition: all 0.25s ease-in-out;
-		-o-transition: all 0.25s ease-in-out;
-		-webkit-transition: all 0.25s ease-in-out;
-		transition: all 0.25s ease-in-out;
-		text-align: center;
-}
-
-.pop button .gal_btn {
-		position:absolute;
-		top:4%;
-		right:4%;
-		cursor:pointer;
-		font-size: 24px;
-		-moz-border-radius: 50%;
-		-webkit-border-radius: 50%;
-		border-radius: 50%;
-		border: 2px solid transparent;
-		color: #f91791;
-		background-color: transparent;
-		display: inline-block;
-		width: 50px;
-		height: 50px;
-		line-height: 50px;
-		padding: 0 5px;
-		-moz-transition: all 0.25s ease-in-out;
-		-o-transition: all 0.25s ease-in-out;
-		-webkit-transition: all 0.25s ease-in-out;
-		transition: all 0.25s ease-in-out;
-		text-align: center;
-}
-
-.pop button .gal_btn:hover{
-	color: #f91791;
-	text-shadow: 1px 1px 1px #000;
-	-moz-transition: all 0.25s ease-in-out;
-	-o-transition: all 0.25s ease-in-out;
-	-webkit-transition: all 0.25s ease-in-out;
-	transition: all 0.25s ease-in-out;
-}
-
-.closeX {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  overflow: hidden;
-}
-
-.closeX:hover::before, .closeX:hover::after {
-  background: #f91791;
-  text-shadow: 1px 1px 1px #000;
-  -moz-transition: all 0.25s ease-in-out;
-  -o-transition: all 0.25s ease-in-out;
-  -webkit-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-}
-
-.closeX::before, .closeX::after {
-  content: '';
-  position: absolute;
-  height: 2px;
-  width: 100%;
-  top: 50%;
-  left: 0;
-  margin-top: -1px;
-  background: #000;
-}
-
-.closeX::before {
-  transform: rotate(45deg);
-}
-
-.closeX::after {
-  transform: rotate(-45deg);
-}
-
-.closeX.big {
-  transform: scale(3);
-}
-
-.closeX.hairline::before, .closeX.hairline::after {
-  height: 1px;
-}
-
-.tech-row{
-	background-color: #f91791;
-	width: 100%;
-	height: 50px;
-}
-
-
-.techUsed {
-  /*position: absolute;*/
-  top: 0;
-  left: 0;
-  width: 100%;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 100;
-  font-size: 1.75em;
-  text-align: center;
-  color: #000;
-  -webkit-animation: 3s fade;
-  animation: 3s fade;
-}
-.techUsed p{
-	font-family: 'Raleway', sans-serif;
-  font-weight: 100;
-  font-size: 24px;
-}
-.techUsed h3 {
-  display: inline-block;
-  position: relative;
-  padding: .5em .5em;
-}
-.techUsed h3:before {
-  display: block;
-  content: '';
-  width: 110%;
-  margin-left: -5%;
-  margin-bottom: 3%;
-  border-top: 1px solid #000;
-  -webkit-animation: 2.5s draw;
-  animation: 2.5s draw;
-	-moz-animation-delay: .5s;
-	-webkit-animation-delay: .5s;
-	animation-delay: .5s;
-}
-.techUsed h3:after {
-  display: block;
-  content: '';
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  border-bottom: 1px solid #000;
-  -webkit-animation: 2.5s draw-bottom;
-  animation: 2.5s draw-bottom;
-	-moz-animation-delay: .5s;
-	-webkit-animation-delay: .5s;
-	animation-delay: .5s;
-}
-@keyframes draw {
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 110%;
-  }
-}
-@keyframes draw-bottom {
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 100%;
-  }
-}
-@keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-
-#resume {
-	background-color: #fff;
-	padding: 80px 0 210px 0;
-	text-align: center;
-	position: relative;
-}
-
-#resume .holder {
-	max-width: 1000px;
-	margin: 0 auto;
-}
 
 #resume .resume {
 	line-height: 34px;
 }
 
-#resume .tech {
-	margin: 40px 0;
-}
-
-#resume .tech a i {
-	font-size: 24px;
-	-moz-border-radius: 100px;
-	-webkit-border-radius: 100px;
-	border-radius: 100px;
-	border: 2px solid #fff;
-	display: inline-block;
-	width: 55px;
-	height: 55px;
-	line-height: 55px;
-	margin: 0 5px;
-	-moz-transition: all 0.25s ease-in-out;
-	-o-transition: all 0.25s ease-in-out;
-	-webkit-transition: all 0.25s ease-in-out;
-	transition: all 0.25s ease-in-out;
-	color: #fff;
-}
-
-#resume .tech a i:hover {
-	background-color: #fff;
-	color: #f91791;
-}
-
-#resume .copy {
-	padding: 40px 0 0 0;
-}
 
 
-#contactMe {
-	background-color: #f91791;
-	text-align: center;
-	padding: 100px 0 120px 0;
-	position: relative;
-	color: #fff;
-}
-
-#contactMe:before {
-	-moz-transform: skewY(-3deg);
-	-ms-transform: skewY(-3deg);
-	-webkit-transform: skewY(-3deg);
-	transform: skewY(-3deg);
-	height: 90px;
-	width: 100%;
-	content: "";
-	top: -46px;
-	left: 0;
-	background: #f91791;
-	position: absolute;
-}
-#resume .title h2:after {
-	background-color: #f91791;
-}
-
-#contactMe h2 {
-	font-size: 40px;
-	padding: 0 0 35px;
-	color: #fff;
-	font-family: "Audrey-Normal", monospace;
-}
-#contactMe h2:after {
-	bottom: 15px;
-
-}
-
-#contactMe .button {
-	border-color: #fff;
-	color: #fff;
-	clear: both;
-	z-index: 0;
-}
-
-#contactMe .button:hover {
-	color: #f91791;
-	background: #fff;
-	-moz-transition: all 0.25s ease-in-out;
-	-o-transition: all 0.25s ease-in-out;
-	-webkit-transition: all 0.25s ease-in-out;
-	transition: all 0.25s ease-in-out;
-}
-
-#contactMe .button:before {
-	background: #fff;
-}
-
-#contactMe .contact-info {
-	margin: 0 auto;
-	font-size: 25px;
-	font-family: "Audrey-Normal", monospace;
-}
-
-#contactMe .contact-info a {
-	color: #fff;
-	text-decoration: none;
-}
-
-#contactMe .contact-info a:hover {
-	text-decoration: underline;
-	font-weight: bolder;
-}
-
-#contactMe .contact-info div {
-	display: inline-block;
-}
-
-#contactMe .contact-info div + div {
-	margin: 0 0 0 20px;
-}
-
-#contactMe .contact-info .mail a span{
-
-		font-family: 'Montserrat';
-		font-size: 14px;
-		line-height: 27px;
-
-}
-
-#contactMe .contact-info .fa-mobile {
-	font-size: 38px;
-	float: left;
-	margin-right: 10px;
-	margin-top: -6px;
-}
-
-#contactMe .social {
-	margin: 40px 0;
-}
-
-#contactMe .social a i {
-	font-size: 24px;
-	-moz-border-radius: 100px;
-	-webkit-border-radius: 100px;
-	border-radius: 100px;
-	border: 2px solid #fff;
-	display: inline-block;
-	width: 55px;
-	height: 55px;
-	line-height: 55px;
-	margin: 5px;
-	-moz-transition: all 0.25s ease-in-out;
-	-o-transition: all 0.25s ease-in-out;
-	-webkit-transition: all 0.25s ease-in-out;
-	transition: all 0.25s ease-in-out;
-	color: #fff;
-	cursor:pointer;
-}
-
-#contactMe .social a i:hover {
-	background-color: #fff;
-	color: #f91791;
-}
-
-#contactMe .copy {
-	padding: 40px 0 0 0;
-}
-
-#resume .resume .quote {
+.quote {
 	font-size: 22px;
 }
 
@@ -2484,7 +1764,7 @@ border: 1px solid #000;
 }
 
 
-
+/*
 body>nav {
     position: fixed;
     top: 0;
@@ -2747,7 +2027,7 @@ body>nav.hide-it {
     -webkit-transition: all 0s;
     transition: all 0s;
     display: none
-}
+} */
 
 @media (max-width: 1000px) {
     .grid {
@@ -2922,14 +2202,12 @@ body>nav.hide-it {
     margin-left: 270px;
 }
 	#bio > p {
-  margin-top: 10px;
-
+  	margin-top: 10px;
     font-size: 20px;
     line-height: 30px;
 }
 	blockquote{
 		font-size: 14px;
-    /* padding: 5px 5px 0 5px; */
     margin-top: 5px;
 	}
 
