--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -280,6 +280,7 @@ body > section {
   padding: 80px 0 210px 0;
   text-align: center;
   position: relative;
+  width: 100%;
 
 	.holder {
     max-width: 1000px;
