--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -162,351 +162,351 @@ body > section > .holder > .title h2:after {
 }
 
 .optimism:hover i:nth-of-type(1) {
-  transform: translate3d(19px, -53px, 0) rotate(36deg);
-  background: #00ffb3;
+  transform: translate3d(-72px, -78px, 0) rotate(210deg);
+  background: #1100ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(2) {
-  transform: translate3d(28px, -54px, 0) rotate(340deg);
-  background: #1aff00;
+  transform: translate3d(-35px, -51px, 0) rotate(234deg);
+  background: #b300ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(3) {
-  transform: translate3d(16px, -83px, 0) rotate(63deg);
-  background: #006aff;
+  transform: translate3d(-5px, -67px, 0) rotate(47deg);
+  background: #73ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(4) {
-  transform: translate3d(62px, -81px, 0) rotate(108deg);
-  background: #0400ff;
+  transform: translate3d(-13px, -60px, 0) rotate(18deg);
+  background: #00ff5e;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(5) {
-  transform: translate3d(12px, -62px, 0) rotate(270deg);
-  background: #00f7ff;
+  transform: translate3d(5px, -80px, 0) rotate(294deg);
+  background: #a2ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(6) {
-  transform: translate3d(-59px, -80px, 0) rotate(342deg);
-  background: #7300ff;
+  transform: translate3d(2px, -82px, 0) rotate(146deg);
+  background: #ff6f00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(7) {
-  transform: translate3d(-16px, -70px, 0) rotate(55deg);
-  background: #1eff00;
+  transform: translate3d(36px, -92px, 0) rotate(282deg);
+  background: #00ffaa;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(8) {
-  transform: translate3d(3px, -80px, 0) rotate(139deg);
-  background: #04ff00;
+  transform: translate3d(18px, -57px, 0) rotate(265deg);
+  background: #ff0091;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(9) {
-  transform: translate3d(-25px, -97px, 0) rotate(25deg);
+  transform: translate3d(89px, -72px, 0) rotate(17deg);
   background: #0059ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(10) {
-  transform: translate3d(-7px, -93px, 0) rotate(304deg);
-  background: #0073ff;
+  transform: translate3d(-66px, -56px, 0) rotate(175deg);
+  background: #ff0900;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(11) {
-  transform: translate3d(40px, -91px, 0) rotate(184deg);
-  background: #00ffbf;
+  transform: translate3d(-43px, -99px, 0) rotate(139deg);
+  background: #00fff7;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(12) {
-  transform: translate3d(24px, -71px, 0) rotate(39deg);
-  background: #00ffbf;
+  transform: translate3d(15px, -81px, 0) rotate(168deg);
+  background: #ff00e1;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(13) {
-  transform: translate3d(-27px, -93px, 0) rotate(185deg);
-  background: #00ffd9;
+  transform: translate3d(-48px, -56px, 0) rotate(356deg);
+  background: #0055ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(14) {
-  transform: translate3d(29px, -69px, 0) rotate(345deg);
-  background: #0015ff;
+  transform: translate3d(4px, -70px, 0) rotate(333deg);
+  background: #ff00d5;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(15) {
-  transform: translate3d(-34px, -77px, 0) rotate(282deg);
-  background: #ff1100;
+  transform: translate3d(-31px, -79px, 0) rotate(7deg);
+  background: #ffae00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(16) {
-  transform: translate3d(89px, -67px, 0) rotate(205deg);
-  background: #001eff;
+  transform: translate3d(85px, -77px, 0) rotate(270deg);
+  background: #00ff59;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(17) {
-  transform: translate3d(-38px, -62px, 0) rotate(237deg);
-  background: #ff00e6;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(18) {
-  transform: translate3d(33px, -64px, 0) rotate(353deg);
-  background: #00ffcc;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(19) {
-  transform: translate3d(-34px, -89px, 0) rotate(74deg);
-  background: #62ff00;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(20) {
-  transform: translate3d(-98px, -68px, 0) rotate(217deg);
-  background: #0095ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(21) {
-  transform: translate3d(-38px, -58px, 0) rotate(304deg);
-  background: #44ff00;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(22) {
-  transform: translate3d(23px, -86px, 0) rotate(299deg);
+  transform: translate3d(-31px, -67px, 0) rotate(189deg);
   background: #bf00ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
+.optimism:hover i:nth-of-type(18) {
+  transform: translate3d(45px, -69px, 0) rotate(76deg);
+  background: #48ff00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(19) {
+  transform: translate3d(-68px, -50px, 0) rotate(299deg);
+  background: #001aff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(20) {
+  transform: translate3d(33px, -99px, 0) rotate(100deg);
+  background: #2200ff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(21) {
+  transform: translate3d(-37px, -87px, 0) rotate(95deg);
+  background: #00ff84;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(22) {
+  transform: translate3d(44px, -50px, 0) rotate(109deg);
+  background: #ffea00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
 .optimism:hover i:nth-of-type(23) {
-  transform: translate3d(-99px, -66px, 0) rotate(35deg);
-  background: #88ff00;
+  transform: translate3d(-80px, -78px, 0) rotate(153deg);
+  background: #00b3ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(24) {
-  transform: translate3d(-90px, -65px, 0) rotate(81deg);
-  background: #e100ff;
+  transform: translate3d(-28px, -51px, 0) rotate(260deg);
+  background: #ffe600;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(25) {
-  transform: translate3d(-85px, -92px, 0) rotate(120deg);
-  background: #ff5500;
+  transform: translate3d(79px, -59px, 0) rotate(262deg);
+  background: #6fff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(26) {
-  transform: translate3d(76px, -73px, 0) rotate(343deg);
-  background: #73ff00;
+  transform: translate3d(58px, -89px, 0) rotate(104deg);
+  background: #00ffc8;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(27) {
-  transform: translate3d(48px, -51px, 0) rotate(352deg);
-  background: #0009ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(28) {
-  transform: translate3d(-60px, -82px, 0) rotate(237deg);
-  background: #ff00cc;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(29) {
-  transform: translate3d(-58px, -53px, 0) rotate(253deg);
-  background: #ff2600;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(30) {
-  transform: translate3d(55px, -89px, 0) rotate(47deg);
-  background: #5e00ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(31) {
-  transform: translate3d(15px, -98px, 0) rotate(349deg);
-  background: #ff6600;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(32) {
-  transform: translate3d(-40px, -78px, 0) rotate(154deg);
-  background: #2f00ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(33) {
-  transform: translate3d(80px, -75px, 0) rotate(169deg);
-  background: #0077ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(34) {
-  transform: translate3d(-44px, -67px, 0) rotate(319deg);
-  background: #ff0055;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(35) {
-  transform: translate3d(35px, -78px, 0) rotate(216deg);
+  transform: translate3d(60px, -98px, 0) rotate(324deg);
   background: #88ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
+.optimism:hover i:nth-of-type(28) {
+  transform: translate3d(38px, -57px, 0) rotate(32deg);
+  background: #00ff84;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(29) {
+  transform: translate3d(34px, -75px, 0) rotate(74deg);
+  background: #c800ff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(30) {
+  transform: translate3d(-67px, -60px, 0) rotate(32deg);
+  background: #ff6a00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(31) {
+  transform: translate3d(-10px, -92px, 0) rotate(355deg);
+  background: #73ff00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(32) {
+  transform: translate3d(-47px, -75px, 0) rotate(196deg);
+  background: #6aff00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(33) {
+  transform: translate3d(7px, -94px, 0) rotate(215deg);
+  background: #002fff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(34) {
+  transform: translate3d(-99px, -74px, 0) rotate(276deg);
+  background: #ff9500;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(35) {
+  transform: translate3d(-26px, -83px, 0) rotate(111deg);
+  background: #00ffaa;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
 .optimism:hover i:nth-of-type(36) {
-  transform: translate3d(-13px, -65px, 0) rotate(100deg);
-  background: #ffc800;
+  transform: translate3d(42px, -59px, 0) rotate(356deg);
+  background: #00fffb;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(37) {
-  transform: translate3d(33px, -85px, 0) rotate(81deg);
-  background: #ff00b3;
+  transform: translate3d(-48px, -83px, 0) rotate(148deg);
+  background: #001aff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(38) {
-  transform: translate3d(-25px, -78px, 0) rotate(295deg);
-  background: #1100ff;
+  transform: translate3d(-22px, -61px, 0) rotate(213deg);
+  background: #a600ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(39) {
-  transform: translate3d(-2px, -56px, 0) rotate(211deg);
-  background: #ff5500;
+  transform: translate3d(-57px, -85px, 0) rotate(182deg);
+  background: #84ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(40) {
-  transform: translate3d(8px, -77px, 0) rotate(270deg);
-  background: #ff009d;
+  transform: translate3d(-33px, -89px, 0) rotate(265deg);
+  background: magenta;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(41) {
-  transform: translate3d(21px, -71px, 0) rotate(41deg);
-  background: #ff2b00;
+  transform: translate3d(-81px, -59px, 0) rotate(218deg);
+  background: #f2ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(42) {
-  transform: translate3d(25px, -52px, 0) rotate(236deg);
-  background: #00ff2b;
+  transform: translate3d(-73px, -96px, 0) rotate(40deg);
+  background: #b3ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(43) {
-  transform: translate3d(-52px, -60px, 0) rotate(27deg);
-  background: #ff008c;
+  transform: translate3d(-25px, -52px, 0) rotate(290deg);
+  background: #00ff15;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(44) {
-  transform: translate3d(-25px, -63px, 0) rotate(334deg);
-  background: #ff0080;
+  transform: translate3d(-54px, -72px, 0) rotate(191deg);
+  background: #d9ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(45) {
-  transform: translate3d(24px, -51px, 0) rotate(154deg);
-  background: #d5ff00;
+  transform: translate3d(4px, -50px, 0) rotate(11deg);
+  background: #ff4000;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(46) {
-  transform: translate3d(-95px, -87px, 0) rotate(210deg);
-  background: #ff0080;
+  transform: translate3d(3px, -61px, 0) rotate(284deg);
+  background: #00ff99;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(47) {
-  transform: translate3d(71px, -73px, 0) rotate(269deg);
-  background: #ff2600;
+  transform: translate3d(0px, -53px, 0) rotate(160deg);
+  background: #ff1100;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(48) {
-  transform: translate3d(-19px, -58px, 0) rotate(135deg);
-  background: #33ff00;
+  transform: translate3d(-35px, -93px, 0) rotate(247deg);
+  background: #ff0015;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(49) {
-  transform: translate3d(-13px, -70px, 0) rotate(138deg);
-  background: #ff0004;
+  transform: translate3d(-11px, -85px, 0) rotate(242deg);
+  background: #aeff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(50) {
-  transform: translate3d(-59px, -57px, 0) rotate(256deg);
-  background: #40ff00;
+  transform: translate3d(28px, -78px, 0) rotate(211deg);
+  background: #15ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
@@ -516,6 +516,7 @@ body > section > .holder > .title h2:after {
   padding: 80px 0 210px 0;
   text-align: center;
   position: relative;
+  width: 100%;
 }
 
 #resume .holder {
